--- a/srcs/requirements/bonus/hugo/conf/baseof.html
+++ b/srcs/requirements/bonus/hugo/conf/baseof.html
@@ -22,7 +22,7 @@
   <body>
     <header class="app-header">
       <a href="{{ "" | relURL }}">
-        <img class="app-header-avatar" src="{{ .Site.Params.avatar | default "avatar.png" | relURL }}" alt="{{ .Site.Params.avatar | default "Avatar" }}" />
+        <img class="app-header-avatar" src="{{ .Site.Params.avatar | default "avatar.jpg" | relURL }}" alt="{{ .Site.Params.avatar | default "Avatar" }}" />
       </a>
       <span class="app-header-title">{{ .Site.Title }}</span>
       {{- with .Site.Menus.main }}
